# openbeepboop

./: README.md  SPEC.md  pyproject.toml
openbeepboop/cli/: client.py  node.py  server.py
openbeepboop/client/: client.py
openbeepboop/common/: config.py  db.py  models.py
openbeepboop/node/: worker.py
openbeepboop/server/: api.py
tests/: test_cli_client.py  test_cli_node.py  test_cli_server.py  test_client.py  test_common_config.py  test_common_db.py  test_node.py  test_server.py  test_server_errors.py
